<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView_detail_movie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/tv_detail_name_movie"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_detail_movie"
            app:layout_constraintTop_toTopOf="@+id/imageView_detail_movie" />

        <TextView
            android:id="@+id/tv_detail_description_movie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/lorem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_name_movie"
            app:layout_constraintStart_toStartOf="@+id/imageView_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/imageView_detail_movie" />

        <TextView
            android:id="@+id/tv_detail_duration_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_name_movie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_name_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name_movie"
            app:drawableRightCompat="@drawable/ic_baseline_timer_24"
            app:drawableEndCompat="@drawable/ic_baseline_timer_24" />

        <TextView
            android:id="@+id/tv_detail_rating_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_duration_movie"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_duration_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_duration_movie"
            app:drawableEndCompat="@drawable/ic_baseline_star_24"
            app:drawableRightCompat="@drawable/ic_baseline_star_24" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>