<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profil"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/menu_bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_baseline_bookmark_selector_24"
        android:title="@string/menu_bookmark"
        app:showAsAction="always" />

</menu>